--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <div class="services_content">
                         <div>
                             <i class="uil uil-web-grid services_icon"></i>
-                            <h3 class="services_title">Ui/Ux <br> Designer</h3>
+                            <h3 class="services_title">Leroblar <br> Lero Lero</h3>
                         </div>
                         <span class="button button--flex button--small button--link services_button">
                             View More
@@ -487,21 +487,21 @@
                         </span>
                         <div class="services_modal">
                             <div class="services_modal-content">
-                                <h4 class="services_modal-title">Ui/Ux <br> Designer</h4>
-                                <i class="uil uil-times services_moral-close"></i>
+                                <h4 class="services_modal-title">Leroblar <br> Lero Lero</h4>
+                                <i class="uil uil-times services_modal-close"></i>
 
                                 <ul class="services_modal-services grid">
                                     <li class="services_modal-service">
                                         <i class="uil uil-check-circle services_modal-icon"></i>
-                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis molestias voluptate porro quaerat praesentium deleniti sunt adipisci dolor explicabo illum exercitationem natus, laudantium vitae iusto dolore esse et nobis quis.</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aliquid eum accusamus dignissimos exercitationem inventore expedita natus tenetur dolore voluptate saepe, provident doloribus iusto earum eaque atque ipsa temporibus ducimus?</p>
                                     </li>
                                     <li class="services_modal-service">
                                         <i class="uil uil-check-circle services_modal-icon"></i>
-                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis molestias voluptate porro quaerat praesentium deleniti sunt adipisci dolor explicabo illum exercitationem natus, laudantium vitae iusto dolore esse et nobis quis.</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aliquid eum accusamus dignissimos exercitationem inventore expedita natus tenetur dolore voluptate saepe, provident doloribus iusto earum eaque atque ipsa temporibus ducimus?</p>
                                     </li>
                                     <li class="services_modal-service">
                                         <i class="uil uil-check-circle services_modal-icon"></i>
-                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis molestias voluptate porro quaerat praesentium deleniti sunt adipisci dolor explicabo illum exercitationem natus, laudantium vitae iusto dolore esse et nobis quis.</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aliquid eum accusamus dignissimos exercitationem inventore expedita natus tenetur dolore voluptate saepe, provident doloribus iusto earum eaque atque ipsa temporibus ducimus?</p>
                                     </li>
                                 </ul>
                             </div>
@@ -519,7 +519,7 @@
                         <div class="services_modal">
                             <div class="services_modal-content">
                                 <h4 class="services_modal-title">Ui/Ux <br> Designer</h4>
-                                <i class="uil uil-times services_moral-close"></i>
+                                <i class="uil uil-times services_modal-close"></i>
 
                                 <ul class="services_modal-services grid">
                                     <li class="services_modal-service">
