--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                                 <p class="portfolio_description">
                                     Software developed to demonstrate, in a visual way, the functioning of multithreading in Python. Recommended using process management tools, such as ProcessExplorer, to better visualize the behavior of threads in the system. The software creates a thread to processes the ball movement of each ball by demand. Therefore, creating multiples threads that can be observed.
                                 </p>
-                                <a href="" class="button button--flex button--small portfolio_button">
+                                <a href="https://github.com/FabioPelagaggi/Multithreading-Bouncing-Balls.git" target="_blank" class="button button--flex button--small portfolio_button">
                                     Download on GitHub
                                     <i class="uil uil-code-branch button_icon"></i>
                                 </a>
@@ -543,7 +543,7 @@
                                 <p class="portfolio_description">
                                     Software developed to demonstrate, in a visual way, the functioning of multiprocessing in Python. Recommended using process management tools, such as ProcessExplorer, to better visualize the behavior of threads in the system. The software creates a thread to processes the ball movement of each ball by demand. Therefore, creating multiples threads that can be observed.
                                 </p>
-                                <a href="" class="button button--flex button--small portfolio_button">
+                                <a href="https://github.com/FabioPelagaggi/Multiprocessing-LocalHost-Bouncing-Balls.git" target="_blank" class="button button--flex button--small portfolio_button">
                                     Download on GitHub
                                     <i class="uil uil-code-branch button_icon"></i>
                                 </a>
@@ -558,7 +558,7 @@
                                 <p class="portfolio_description">
                                     Project that aims to create a tool, using the Python programming language, that visually shows the use of the resources of some hardware components. This software shows graphically the percentage of use of the central processing unit, CPU, as well as the main memory and the main storage unit, as well as some other information regarding the computer hardware.
                                 </p>
-                                <a href="" class="button button--flex button--small portfolio_button">
+                                <a href="https://github.com/FabioPelagaggi/PC_Resources_Monitor.git" target="_blank" class="button button--flex button--small portfolio_button">
                                     Download on GitHub
                                     <i class="uil uil-code-branch button_icon"></i>
                                 </a>
