--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     <div class="swiper-wrapper">
 
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="assets/images/MT_Bouncing_Balls.png" alt="Multithreading Buncing Ball Screanshot" class="portfolio_img">
+                            <img src="assets/images/MT_Bouncing_Balls.png" alt="Multithreading Buncing Ball Screenshot" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Multithreading Bouncing Ball</h3>
@@ -536,7 +536,7 @@
                         </div>
 
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="assets/images/MP_Bouncing_Balls.png" alt="Multiprocessing-LocalHost Bouncing Balls Screanshot" class="portfolio_img">
+                            <img src="assets/images/MP_Bouncing_Balls.png" alt="Multiprocessing-LocalHost Bouncing Balls Screenshot" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">Multiprocessing-LocalHost Bouncing Balls</h3>
@@ -551,7 +551,7 @@
                         </div>
 
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="assets/images/PC_Resources_Monitor.png" alt="PC Resources Monitor Screanshot" class="portfolio_img">
+                            <img src="assets/images/PC_Resources_Monitor.png" alt="PC Resources Monitor Screenshot" class="portfolio_img">
 
                             <div class="portfolio_data">
                                 <h3 class="portfolio_title">PC Resources Monitor</h3>
