--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+        <link rel="icon" href="assets/images/programming.png">
 
-        <title>Portfolio Project</title>
+        <title>My Portfolio - Fabio Pelagaggi</title>
     </head>
     <body>
         <header class="header" id="header">
