--- a/at.html
+++ b/at.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+        <link rel="icon" href="assets/images/brain.png">
 
         <title>Questões AT</title>
     </head>
