--- a/index.html
+++ b/index.html
@@ -561,6 +561,35 @@
                             </div>
                         </div>
 
+                        <div class="portfolio_content grid swiper-slide">
+                            <img src="assets/images/Social_Pet.png" alt="App Screenshot" class="portfolio_img">
+
+                            <div class="portfolio_data">
+                                <h3 class="portfolio_title">Social Pet</h3>
+                                <p class="portfolio_description">
+                                    Android team project developed using agile Scrum methodology, with versioning tools like Git. The project consisted of a social network for android systems. Its development was carried out using Kotlin language and MVVM architecture. The following aspects have been implemented: Publish to Google Play app store, Security Architecture for apps, Ads and Shopping, Accessibility techniques in Android interfaces, RESTful APIs, Firebase.
+                                </p>
+                                <a href="https://github.com/z21GRPEDS01BDA501N1/Unify-Project.git" target="_blank" class="button button--flex button--small portfolio_button">
+                                    Download on GitHub
+                                    <i class="uil uil-code-branch button_icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio_content grid swiper-slide">
+                            <img src="assets/images/Memory_Game.jpg" alt="Memory Game Screenshot" class="portfolio_img">
+
+                            <div class="portfolio_data">
+                                <h3 class="portfolio_title">Memory Game</h3>
+                                <p class="portfolio_description">
+                                    Project developed using HTML5, CSS3 and JavaScript, with tools like JQuery on the backend.
+                                </p>
+                                <a href="https://github.com/FabioPelagaggi/Memory-Game.git" target="_blank" class="button button--flex button--small portfolio_button">
+                                    Download on GitHub
+                                    <i class="uil uil-code-branch button_icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
                     
                     <div class="swiper-button-next">
