--- a/index.html
+++ b/index.html
@@ -284,6 +284,10 @@
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
                                         <p><strong>Computer Network Architecture:</strong> Knowledge of IEEE 802.3 and 802.11, b, a, g, n, ac interfaces. And its components; Routers, Switch, Bridge, Hubs. TCP / IP and OSI protocols.</p>
                                     </li>
+                                    <li class="knowledges_modal-knowledge">
+                                        <i class="uil uil-check-circle knowledges_modal-icon"></i>
+                                        <p><strong>Human–Computer Interaction Methods</strong></p>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -305,20 +309,39 @@
                                 <ul class="knowledges_modal-knowledges grid">
                                     <li class="knowledges_modal-knowledge">
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
-                                        <p><strong>Python:</strong> Knowledge in Python language, with experience with several of its modules, including; psutil, os, cpuinfo, platform, subprocess, socket, nmap, threading, BeautifulSoup, requests, pygame among others.
-                                            Experience designing and develop a software using Python language, exploring concepts of network architecture, computer architecture and operating systems.</p>
+                                        <p><strong>Web Development: </strong>HTML5, CSS3, JavaScript, Media Query, JQuery</p>
                                     </li>
                                     <li class="knowledges_modal-knowledge">
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
-                                        <p><strong>Kotlin:</strong> Knowledge in Android Development using Kotlin language and MVVM architecture. Experience in the following features: Publish to Google Play app store, Security Architecture for apps, Ads and Purchases, accessibility techniques in Android interfaces, APIs RESTful, Firebase.</p>
+                                        <p><strong>Python: </strong>cpuinfo, platform, subprocess, socket, nmap, threading, BeautifulSoup, requests, pygame among others.</p>
                                     </li>
                                     <li class="knowledges_modal-knowledge">
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
-                                        <p><strong>JavaScript:</strong> ...</p>
+                                        <p><strong>Desenvolvimento Android, Kotlin: </strong>MVVM architecture, automated tests. Publish to Google Play app store, Security Architecture for apps, Ads and Purchases, technical accessibility in Android interfaces.</p>
                                     </li>
                                     <li class="knowledges_modal-knowledge">
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
-                                        <p><strong>HTML e CSS:</strong> ...</p>
+                                        <p><strong>RESTful APIs</strong></p>
+                                    </li>
+                                    <li class="knowledges_modal-knowledge">
+                                        <i class="uil uil-check-circle knowledges_modal-icon"></i>
+                                        <p><strong>NodeJs</strong></p>
+                                    </li>
+                                    <li class="knowledges_modal-knowledge">
+                                        <i class="uil uil-check-circle knowledges_modal-icon"></i>
+                                        <p><strong>MongoDB</strong></p>
+                                    </li>
+                                    <li class="knowledges_modal-knowledge">
+                                        <i class="uil uil-check-circle knowledges_modal-icon"></i>
+                                        <p><strong>Firebase</strong></p>
+                                    </li>
+                                    <li class="knowledges_modal-knowledge">
+                                        <i class="uil uil-check-circle knowledges_modal-icon"></i>
+                                        <p><strong>Git</strong></p>
+                                    </li>
+                                    <li class="knowledges_modal-knowledge">
+                                        <i class="uil uil-check-circle knowledges_modal-icon"></i>
+                                        <p><strong>GitHub</strong></p>
                                     </li>
                                 </ul>
                             </div>
@@ -517,51 +540,6 @@
                     <div class="swiper-wrapper">
 
                         <div class="portfolio_content grid swiper-slide">
-                            <img src="assets/images/MT_Bouncing_Balls.png" alt="Multithreading Buncing Ball Screenshot" class="portfolio_img">
-
-                            <div class="portfolio_data">
-                                <h3 class="portfolio_title">Multithreading Bouncing Ball</h3>
-                                <p class="portfolio_description">
-                                    Software developed to demonstrate, in a visual way, the functioning of multithreading in Python. Recommended using process management tools, such as ProcessExplorer, to better visualize the behavior of threads in the system. The software creates a thread to processes the ball movement of each ball by demand. Therefore, creating multiples threads that can be observed.
-                                </p>
-                                <a href="https://github.com/FabioPelagaggi/Multithreading-Bouncing-Balls.git" target="_blank" class="button button--flex button--small portfolio_button">
-                                    Download on GitHub
-                                    <i class="uil uil-code-branch button_icon"></i>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="portfolio_content grid swiper-slide">
-                            <img src="assets/images/MP_Bouncing_Balls.png" alt="Multiprocessing-LocalHost Bouncing Balls Screenshot" class="portfolio_img">
-
-                            <div class="portfolio_data">
-                                <h3 class="portfolio_title">Multiprocessing-LocalHost Bouncing Balls</h3>
-                                <p class="portfolio_description">
-                                    Software developed to demonstrate, in a visual way, the functioning of multiprocessing in Python. Recommended using process management tools, such as ProcessExplorer, to better visualize the behavior of threads in the system. The software creates a thread to processes the ball movement of each ball by demand. Therefore, creating multiples threads that can be observed.
-                                </p>
-                                <a href="https://github.com/FabioPelagaggi/Multiprocessing-LocalHost-Bouncing-Balls.git" target="_blank" class="button button--flex button--small portfolio_button">
-                                    Download on GitHub
-                                    <i class="uil uil-code-branch button_icon"></i>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="portfolio_content grid swiper-slide">
-                            <img src="assets/images/PC_Resources_Monitor.png" alt="PC Resources Monitor Screenshot" class="portfolio_img">
-
-                            <div class="portfolio_data">
-                                <h3 class="portfolio_title">PC Resources Monitor</h3>
-                                <p class="portfolio_description">
-                                    Project that aims to create a tool, using the Python programming language, that visually shows the use of the resources of some hardware components. This software shows graphically the percentage of use of the central processing unit, CPU, as well as the main memory and the main storage unit, as well as some other information regarding the computer hardware.
-                                </p>
-                                <a href="https://github.com/FabioPelagaggi/PC_Resources_Monitor.git" target="_blank" class="button button--flex button--small portfolio_button">
-                                    Download on GitHub
-                                    <i class="uil uil-code-branch button_icon"></i>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="portfolio_content grid swiper-slide">
                             <img src="assets/images/Social_Pet.png" alt="App Screenshot" class="portfolio_img">
 
                             <div class="portfolio_data">
@@ -576,6 +554,34 @@
                             </div>
                         </div>
                         <div class="portfolio_content grid swiper-slide">
+                            <img src="assets/images/PC_Resources_Monitor.png" alt="PC Resources Monitor Screenshot" class="portfolio_img">
+
+                            <div class="portfolio_data">
+                                <h3 class="portfolio_title">PC Resources Monitor</h3>
+                                <p class="portfolio_description">
+                                    Project that aims to create a tool, using the Python programming language, that visually shows the use of the resources of some hardware components. This software shows graphically the percentage of use of the central processing unit, CPU, as well as the main memory and the main storage unit, as well as some other information regarding the computer hardware.
+                                </p>
+                                <a href="https://github.com/FabioPelagaggi/PC_Resources_Monitor.git" target="_blank" class="button button--flex button--small portfolio_button">
+                                    Download on GitHub
+                                    <i class="uil uil-code-branch button_icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio_content grid swiper-slide">
+                            <img src="assets/images/MT_Bouncing_Balls.png" alt="Multithreading Buncing Ball Screenshot" class="portfolio_img">
+
+                            <div class="portfolio_data">
+                                <h3 class="portfolio_title">Multithreading Bouncing Ball</h3>
+                                <p class="portfolio_description">
+                                    Software developed to demonstrate, in a visual way, the functioning of multithreading in Python. Recommended using process management tools, such as ProcessExplorer, to better visualize the behavior of threads in the system. The software creates a thread to processes the ball movement of each ball by demand. Therefore, creating multiples threads that can be observed.
+                                </p>
+                                <a href="https://github.com/FabioPelagaggi/Multithreading-Bouncing-Balls.git" target="_blank" class="button button--flex button--small portfolio_button">
+                                    Download on GitHub
+                                    <i class="uil uil-code-branch button_icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio_content grid swiper-slide">
                             <img src="assets/images/Memory_Game.jpg" alt="Memory Game Screenshot" class="portfolio_img">
 
                             <div class="portfolio_data">
@@ -584,6 +590,20 @@
                                     Project developed using HTML5, CSS3 and JavaScript, with tools like JQuery on the backend.
                                 </p>
                                 <a href="https://github.com/FabioPelagaggi/Memory-Game.git" target="_blank" class="button button--flex button--small portfolio_button">
+                                    Download on GitHub
+                                    <i class="uil uil-code-branch button_icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="portfolio_content grid swiper-slide">
+                            <img src="assets/images/MP_Bouncing_Balls.png" alt="Multiprocessing-LocalHost Bouncing Balls Screenshot" class="portfolio_img">
+
+                            <div class="portfolio_data">
+                                <h3 class="portfolio_title">Multiprocessing-LocalHost Bouncing Balls</h3>
+                                <p class="portfolio_description">
+                                    Software developed to demonstrate, in a visual way, the functioning of multiprocessing in Python. Recommended using process management tools, such as ProcessExplorer, to better visualize the behavior of threads in the system. The software creates a thread to processes the ball movement of each ball by demand. Therefore, creating multiples threads that can be observed.
+                                </p>
+                                <a href="https://github.com/FabioPelagaggi/Multiprocessing-LocalHost-Bouncing-Balls.git" target="_blank" class="button button--flex button--small portfolio_button">
                                     Download on GitHub
                                     <i class="uil uil-code-branch button_icon"></i>
                                 </a>
