--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </mask>
                                 <g mask="url(#mask0)">
                                     <path d="M31.5,-28.9C39.7,-14.8,44.5,-1.8,43.3,12.4C42,26.5,34.8,41.8,22.6,48.2C10.3,54.6,-6.8,52.2,-25.1,45.8C-43.3,39.4,-62.7,29.1,-63.6,16.8C-64.6,4.6,-47.2,-9.6,-33.6,-24.9C-19.9,-40.3,-9.9,-56.7,0.9,-57.4C11.6,-58.1,23.3,-43,31.5,-28.9Z" transform="translate(100 100)" />
-                                    <image class="home_blob-img" height="120" width="" x='30' y='40' href="assets/images/perfil.png"/>
+                                    <image class="home_blob-img" height="120" width="100%" x='30' y='40' href="assets/images/perfil.png"/>
                                 </g>
                             </svg>
                         </div>
