Update ASP .NET, C#

--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
                                 <div class="skills_data">
                                     <div class="skills_titles">
                                         <h3 class="skills_name">HTML</h3>
-                                        <span class="skills_number">60%</span>
+                                        <span class="skills_number">85%</span>
                                     </div>
                                     <div class="skills_bar">
                                         <span class="skills_percentage skills_html"></span>
@@ -173,7 +173,7 @@
                                 <div class="skills_data">
                                     <div class="skills_titles">
                                         <h3 class="skills_name">CSS</h3>
-                                        <span class="skills_number">65%</span>
+                                        <span class="skills_number">80%</span>
                                     </div>
                                     <div class="skills_bar">
                                         <span class="skills_percentage skills_css"></span>
@@ -186,6 +186,15 @@
                                     </div>
                                     <div class="skills_bar">
                                         <span class="skills_percentage skills_kt"></span>
+                                    </div>
+                                </div>
+                                <div class="skills_data">
+                                    <div class="skills_titles">
+                                        <h3 class="skills_name">ASP .NET</h3>
+                                        <span class="skills_number">45%</span>
+                                    </div>
+                                    <div class="skills_bar">
+                                        <span class="skills_percentage skills_html"></span>
                                     </div>
                                 </div>
                             </div>
@@ -211,8 +220,17 @@
                                 </div>
                                 <div class="skills_data">
                                     <div class="skills_titles">
+                                        <h3 class="skills_name">C#</h3>
+                                        <span class="skills_number">45%</span>
+                                    </div>
+                                    <div class="skills_bar">
+                                        <span class="skills_percentage skills_java"></span>
+                                    </div>
+                                </div>
+                                <div class="skills_data">
+                                    <div class="skills_titles">
                                         <h3 class="skills_name">Java</h3>
-                                        <span class="skills_number">20%</span>
+                                        <span class="skills_number">35%</span>
                                     </div>
                                     <div class="skills_bar">
                                         <span class="skills_percentage skills_java"></span>
@@ -221,7 +239,7 @@
                                 <div class="skills_data">
                                     <div class="skills_titles">
                                         <h3 class="skills_name">Kotlin</h3>
-                                        <span class="skills_number">67%</span>
+                                        <span class="skills_number">70%</span>
                                     </div>
                                     <div class="skills_bar">
                                         <span class="skills_percentage skills_java"></span>
@@ -309,7 +327,11 @@
                                 <ul class="knowledges_modal-knowledges grid">
                                     <li class="knowledges_modal-knowledge">
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
-                                        <p><strong>Web Development: </strong>HTML5, CSS3, JavaScript, Media Query, JQuery</p>
+                                        <p><strong>Web Development: </strong>HTML5, CSS3, JavaScript, Media Query, JQuery, Vue 3, ReactJS.</p>
+                                    </li>
+                                    <li class="knowledges_modal-knowledge">
+                                        <i class="uil uil-check-circle knowledges_modal-icon"></i>
+                                        <p><strong>ASP .NET Web Application Development: </strong>C#, MVC architecture, ASP, .NET.</p>
                                     </li>
                                     <li class="knowledges_modal-knowledge">
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
@@ -317,7 +339,11 @@
                                     </li>
                                     <li class="knowledges_modal-knowledge">
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
-                                        <p><strong>Desenvolvimento Android, Kotlin: </strong>MVVM architecture, automated tests. Publish to Google Play app store, Security Architecture for apps, Ads and Purchases, technical accessibility in Android interfaces.</p>
+                                        <p><strong>Android Development, Kotlin: </strong>MVVM architecture, automated tests. Publish to Google Play app store, Security Architecture for apps, Ads and Purchases, technical accessibility in Android interfaces.</p>
+                                    </li>
+                                    <li class="knowledges_modal-knowledge">
+                                        <i class="uil uil-check-circle knowledges_modal-icon"></i>
+                                        <p><strong>Test Automation: </strong>Jenkins, Selenium.</p>
                                     </li>
                                     <li class="knowledges_modal-knowledge">
                                         <i class="uil uil-check-circle knowledges_modal-icon"></i>
@@ -371,7 +397,7 @@
 
                             <div class="qualification_data">
                                 <div>
-                                    <h3 class="qualification_title">Software Engineering</h3>
+                                    <h3 class="qualification_title">Software Engineer</h3>
                                     <span class="qualification_subtitle">Instituto Infnet</span>
                                     <div class="qualification_calendar">
                                         <i class="uil uil-schedule"></i>
@@ -434,12 +460,29 @@
                         </div>
                         <div class="qualification_content" data-content id="work">
                             <div class="qualification_data">
+                                <div></div>
+
                                 <div>
-                                    <h3 class="qualification_title">Internship Project Analyst</h3>
+                                    <span class="qualification_rounder"></span>
+                                    <span class="qualification_line"></span>
+                                </div>
+
+                                <div>
+                                    <h3 class="qualification_title">Software Engineer</h3>
+                                    <span class="qualification_subtitle">IBM</span>
+                                    <div class="qualification_calendar">
+                                        <i class="uil uil-schedule"></i>
+                                        Mar/2022 - Currently
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="qualification_data">
+                                <div>
+                                    <h3 class="qualification_title">Project Manager</h3>
                                     <span class="qualification_subtitle">TIM S.A. Brasil</span>
                                     <div class="qualification_calendar">
                                         <i class="uil uil-schedule"></i>
-                                        2021 - Currently
+                                        Jan/2021 - Mar/2022
                                     </div>
                                 </div>
                                 <div>
